site metadata updated

--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- UTF-8 Support -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/apple.svg" />
+    <!-- IE Compatibility -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple iPhone</title>
+    <!-- Theme Color -->
+    <meta name="theme-color" content="##101010" />
+    <!-- Description -->
+    <meta
+      name="description"
+      content="Modern iPhone 15 inspired website using Three.js and GSAP animations."
+    />
+    <!-- Author -->
+    <meta name="author" content="Sanidhya Kr. Verma" />
+
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="reactjs, framer-motion, netlify, react, modern-ui, modern-ux, apple-clone, apple-website, three.js, gsap, gsap-animations, dark-theme, react-themes, postcss, prettier, react-dom, tailwindcss, tailwindcss-animate, ui/ux, js, javascript, typescript, eslint, html, css, js, react"
+    />
+
+    <!-- Icon -->
+    <link rel="icon" type="image/ico" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" type="image/png" href="/favicon1.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/favicon2.png" sizes="32x32" />
+    <link
+      rel="apple-touch-icon"
+      href="/apple-icon.png"
+      type="image/png"
+      sizes="180x180"
+    />
+
+    <!-- Title -->
+    <title>Apple iPhone 15 Clone</title>
   </head>
   <body>
     <div id="root"></div>
